--- a/main.html
+++ b/main.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<ul>
+  <!-- the entire body must be written by the student -->
+  <ul>
     <!-- Golden Retriever -->
     <li>
-      <a href="https://enhttps://en.wikipedia.org/wiki/Golden_Retriever.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-     
+      <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever">
       </a>
     </li>
@@ -24,8 +22,8 @@
       </a>
     </li>
   </ul>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
